--- a/mifosng-android/src/main/res/values-ca/strings.xml
+++ b/mifosng-android/src/main/res/values-ca/strings.xml
@@ -144,7 +144,7 @@
     <string name="uploaded_successfully">%1$s Carregat sense errors</string>
     <string name="username">Usuari</string>
     <string name="withdrawal">Retirat</string>
-    <string name="app_name">MifosXDroid</string>
+    <string name="app_name">AHEAD DFA</string>
     <string name="client_image_updated">Client image updated</string>
     <string name="failed_to_capture_image">Failed to capture image</string>
     <string name="new_text">Nou Text</string>
