--- a/mifosng-android/src/main/res/values-en/strings.xml
+++ b/mifosng-android/src/main/res/values-en/strings.xml
@@ -172,12 +172,12 @@
     <string name="refresh">Refresh</string>
     <string name="error_login_again">Please login to continue</string>
     <string name="port">Port</string>
-    <string name="tenant_identifier">Tenant Identifier</string>
+    <string name="tenant_identifier">Instance</string>
     <string name="dashboard">Dashboard</string>
     <string name="menu_remove_photo">Remove photo</string>
     <string name="menu_take_photo">Take new photo</string>
     <string name="toast_welcome">Welcome</string>
-    <string name="app_name">MifosXDroid</string>
+    <string name="app_name">AHEAD DFA</string>
     <string name="client_image_updated">Client image updated</string>
     <string name="failed_to_capture_image">Failed to capture image</string>
     <string name="new_text">New Text</string>
